--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,33 @@
 @tailwind utilities;
 
 @layer base {
+
+  @font-face {
+    font-family: 'Hellix';
+    src: url('./fonts/Hellix-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Hellix';
+    src: url('./fonts/Hellix-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Hellix';
+    src: url('./fonts/Hellix-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+  }
+ 
+
   :root {
     --radius: 0.5rem
   }
+
   * {
-    @apply antialiased font-poppins;
+    @apply antialiased font-Hellix;
   }
 }
 
